--- a/wp-content/themes/first-theme/style.css
+++ b/wp-content/themes/first-theme/style.css
@@ -10,6 +10,6 @@
  * License: GNU General Public License version 3.0;
  * License URI: http://www.gnu.org/license/gpl-3.0.html;
  * Tags: one-column, two-columns, right-sidebar, left-sidebar, fluid-layout, custom-menu, featured-images, post-formats, sticky-post
- *
+ * Text Domain: alpha;
  */
 
